--- a/app/src/main/res/layout/dialog_fragment_new_word.xml
+++ b/app/src/main/res/layout/dialog_fragment_new_word.xml
@@ -1,70 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dialog_fragment_new_word"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    tools:layout_editor_absoluteY="25dp">
 
     <TextView
         android:id="@+id/enterNative"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:fontFamily="serif"
         android:text="@string/enter_native_word"
         android:textColor="@color/editWordDialog"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="sometext" />
+        app:layout_constraintEnd_toEndOf="@+id/editNative"
+        app:layout_constraintStart_toStartOf="@+id/editNative"
+        app:layout_constraintTop_toBottomOf="@+id/editForeign"
+        tools:text="@string/enter_native_word" />
 
     <EditText
-        android:id="@+id/editNative"
+        android:id="@+id/editForeign"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:maxLength="13"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:inputType="text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/enterNative"
+        android:maxLength="14"
+        app:layout_constraintEnd_toEndOf="@+id/enterNative"
+        app:layout_constraintStart_toStartOf="@+id/enterNative"
+        app:layout_constraintTop_toBottomOf="@+id/enterForeign"
         tools:text="sometext" />
 
     <TextView
         android:id="@+id/enterForeign"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:fontFamily="serif"
         android:text="@string/enter_foreign_word"
         android:textColor="@color/editWordDialog"
         android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="@+id/editForeign"
+        app:layout_constraintStart_toStartOf="@+id/editForeign"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/enter_foreign_word" />
+
+    <EditText
+        android:id="@+id/editNative"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="4dp"
+        android:inputType="text"
+        android:maxLength="14"
+        app:layout_constraintEnd_toStartOf="@+id/addTranslation"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/enterNative"
+        tools:text="sometext" />
+
+    <ImageView
+        android:id="@+id/addTranslation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/editNative"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/editNative"
+        app:layout_constraintTop_toTopOf="@+id/editNative"
+        app:srcCompat="@android:drawable/ic_menu_add" />
+
+
+    <EditText
+        android:id="@+id/editNative2"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="8dp"
+        android:inputType="text"
+        android:maxLength="14"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/removeAddedTranslation"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editNative"
         tools:text="sometext" />
 
-    <EditText
-        android:id="@+id/editForeign"
-        android:layout_width="200dp"
+    <ImageView
+        android:id="@+id/removeAddedTranslation"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:maxLength="13"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="4dp"
         android:layout_marginEnd="8dp"
-        android:inputType="text"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/editNative2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/enterForeign"
-        tools:text="sometext" />
+        app:layout_constraintStart_toEndOf="@+id/editNative2"
+        app:layout_constraintTop_toTopOf="@+id/editNative2"
+        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+
 
 </android.support.constraint.ConstraintLayout>
