--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
-        tools:context="com.andrydevelops.langnote.MainActivity">
+        tools:context=".MainActivity">
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
@@ -48,7 +48,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:visibility="visible"
         ads:adSize="BANNER"
         ads:adUnitId="@string/main_ad_id">
     </com.google.android.gms.ads.AdView>
